Tidy up dependency checks

--- a/Example/package.json
+++ b/Example/package.json
@@ -4,8 +4,8 @@
     "displayName": "Intercom Cordova",
     "cordova": {
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "cordova-plugin-intercom": {}
@@ -13,7 +13,9 @@
     },
     "dependencies": {
         "cordova-android": "13.0.0",
-        "cordova-ios": "^7.1.0",
+        "cordova-ios": "^7.1.0"
+    },
+    "devDependencies": {
         "cordova-plugin-intercom": "file:../intercom-plugin"
     }
 }
