--- a/Example/package.json
+++ b/Example/package.json
@@ -4,16 +4,16 @@
     "displayName": "Intercom Cordova",
     "cordova": {
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "cordova-plugin-intercom": {}
         }
     },
     "dependencies": {
-        "cordova-android": "^10.1.1",
-        "cordova-ios": "7.1.0"
+        "cordova-android": "13.0.0",
+        "cordova-ios": "^7.1.0"
     },
     "devDependencies": {
         "cordova-plugin-intercom": "file:../intercom-plugin"
