--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -6,6 +6,7 @@ buildscript {
                 pushType = it.@value.text().toLowerCase()
             }
         }
+        kotlin_version = '1.8.22'
     }
     repositories {
         google()
@@ -18,7 +19,10 @@ buildscript {
         if (pushType == 'fcm') {
             classpath 'com.google.gms:google-services:4.3.3'
         }
+        // Need to add Kotlin classpath here to avoid an issue with accessing Compose from a Java only project
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+    
 }
 
 repositories {
@@ -28,30 +32,23 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.intercom.android:intercom-sdk-base:14.0.5'
+    implementation 'io.intercom.android:intercom-sdk-base:15.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.intercom:twig:1.3.0'
     implementation 'org.jetbrains:annotations:13.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
         implementation 'com.google.firebase:firebase-messaging:20.+'
-        implementation 'io.intercom.android:intercom-sdk-fcm:12.4.1'
+        implementation 'io.intercom.android:intercom-sdk-fcm:15.9.0'
     }
 }
 
-def googleServicesJsonPath = '../../../google-services.json'
-
-task copyGoogleServices(type: Copy) {
-    from googleServicesJsonPath
-    into '.'
-}
-
-gradle.taskGraph.whenReady {
-    copyGoogleServices
-}
+// Need to add Kotlin plugin here to avoid an issue with accessing Compose from a Java only project
+apply plugin: 'kotlin-android'
 
 if (pushType == 'fcm') {
     apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
+    logger.info("Applying GoogleServicesPlugin")
 } else if (pushType == 'fcm-without-build-plugin') {
     logger.info("Not applying GoogleServicesPlugin from Intercom plugin, another plugin should do this")
 }
