--- a/intercom-plugin/plugin.xml
+++ b/intercom-plugin/plugin.xml
@@ -47,6 +47,7 @@
       <source-file src="src/ios/AppDelegate+IntercomPush.m" />
 
       <config-file target="config.xml" parent="/*">
+        <preference name="deployment-target" value="15.0"/>
         <feature name="Intercom">
           <param name="ios-package" value="IntercomBridge" />
           <param name="onload" value="true" />
