--- a/intercom-plugin/package.json
+++ b/intercom-plugin/package.json
@@ -31,7 +31,7 @@
       "14.0.0": {
         "cordova": "=>12.0.0",
         "cordova-android": ">=13.0.0",
-        "cordova-ios": "7.1.0"
+        "cordova-ios": ">=7.1.0"
       }
     }
   }
