--- a/intercom-plugin/plugin.xml
+++ b/intercom-plugin/plugin.xml
@@ -10,7 +10,7 @@
     <engines>
       <engine name="cordova" version=">=12.0.0" />
       <engine name="cordova-android" version=">=13.0.0" />
-      <engine name="cordova-ios" version="7.1.0" />
+      <engine name="cordova-ios" version="7.1.1" />
     </engines>
 
     <js-module name="Intercom" src="www/intercom.js">
@@ -40,9 +40,8 @@
       <source-file src="src/ios/ICMHelpCenterArticle+DictionaryConversion.m" />
       <source-file src="src/ios/ICMHelpCenterCollectionContent+DictionaryConversion.h" />
       <source-file src="src/ios/ICMHelpCenterCollectionContent+DictionaryConversion.m" />
-      <source-file src="src/ios/ICMHelpCenterSection+DictionaryConversion.h" />
-      <source-file src="src/ios/ICMHelpCenterSection+DictionaryConversion.m" />
-
+      <source-file src="src/ios/ICMUserAttributes+DictionaryConversion.h" />
+      <source-file src="src/ios/ICMUserAttributes+DictionaryConversion.m" />
       <header-file src="src/ios/AppDelegate+IntercomPush.h" />
       <source-file src="src/ios/AppDelegate+IntercomPush.m" />
 
@@ -69,7 +68,7 @@
               <source url="https://cdn.cocoapods.org/"/>
           </config>
           <pods use-frameworks="true">
-              <pod name="Intercom" spec="~> 17.1.2" />
+              <pod name="Intercom" spec="~> 18.2.1" />
           </pods>
       </podspec>
     </platform>
@@ -79,6 +78,7 @@
       <source-file src="src/android/HelpCenterCollectionModel.java" target-dir="src/io/intercom/android/sdk" />
       <source-file src="src/android/HelpCenterCollectionContentModel.java" target-dir="src/io/intercom/android/sdk" />
       <source-file src="src/android/HelpCenterCollectionSectionModel.java" target-dir="src/io/intercom/android/sdk" />
+      <source-file src="src/android/RegistrationModel.java" target-dir="src/io/intercom/android/sdk" />
       <source-file src="src/android/CordovaHeaderInterceptor.java" target-dir="src/io/intercom/android/sdk" />
 
       <framework src="src/android/intercom.gradle" custom="true" type="gradleReference" />
